fixed keyboard aspect ratio bleed bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -150,6 +150,7 @@ a {
   .keyboard-row {
     display: flex;
     justify-content: center;
+    width: 100%;
     // height: 22.5%;
     height: 30%;
     gap: 1rem;
@@ -162,7 +163,8 @@ a {
     justify-content: center;
     align-items: center;
     height: 100%;
-    aspect-ratio: 1/1.2;
+    // aspect-ratio: 1/1.2;
+    width: 5.97%;
     font-size: clamp(1.4vw, 20px, 1.4vw);
     border: 1px solid rgba(255, 255, 255, 0.5);
     cursor: pointer;
